<resources>
    <string name="app_name">Login_and_Registration</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="btn_Login">Login</string>
    <string name="Register">Register</string>
    <string name="btn_register">Register</string>
    <string name="Clicktologin">Click to Login</string>
    <string name="Clicktoregister">Click to Register</string>
    <string name="logout">Logout</string>
</resources>